--- a/src/CSharpMicroServices/Discount.API/appsettings.json
+++ b/src/CSharpMicroServices/Discount.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=postgres;Password=810947;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
