--- a/src/CSharpMicroServices/docker-compose.yml
+++ b/src/CSharpMicroServices/docker-compose.yml
@@ -28,6 +28,12 @@ services:
       context: .
       dockerfile: Basket.API/Dockerfile
 
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discountapi
+    build:
+      context: .
+      dockerfile: Discount.API/Dockerfile
+
 volumes: 
   mongo_data:
   portainer_data:
