Ordering.API.csproj - finished with Routes
Ordering.Infrastructure.csproj created EntityFramework Core Queries to Database and Migration

--- a/src/Ordering.API/appsettings.json
+++ b/src/Ordering.API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=ASP.NET_Projects;Password=810947;"
+  },
+  "EmailSettings": {
+    "FromAddress": "ibragimov-amir@list.ru",
+    "ApiKey": "",
+    "FromName": "Amir"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
