--- a/src/CSharpMicroServices/Ordering.Infrastructure/Ordering.Infrastructure.csproj
+++ b/src/CSharpMicroServices/Ordering.Infrastructure/Ordering.Infrastructure.csproj
@@ -10,4 +10,13 @@
       <ProjectReference Include="..\Ordering.Application\Ordering.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.29">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.29" />
+      <PackageReference Include="SendGrid" Version="9.29.3" />
+    </ItemGroup>
+
 </Project>
