--- a/src/CSharpMicroServices/docker-compose.yml
+++ b/src/CSharpMicroServices/docker-compose.yml
@@ -9,6 +9,9 @@ services:
     
   discountdb:
     image: postgres
+    
+  orderdb:
+    image: mcr.microsoft.com/mssql/server:2022-latest
      
   pgadmin:
     image: dpage/pgadmin4
