--- a/src/CSharpMicroServices/Ordering.API/Dockerfile
+++ b/src/CSharpMicroServices/Ordering.API/Dockerfile
@@ -1,14 +1,15 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
-EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["Ordering.API/Ordering.API.csproj", "Ordering.API/"]
-COPY ["Ordering.Infrastructure/Ordering.Infrastructure.csproj", "Ordering.Infrastructure/"]
 COPY ["Ordering.Application/Ordering.Application.csproj", "Ordering.Application/"]
 COPY ["Ordering.Domain/Ordering.Domain.csproj", "Ordering.Domain/"]
+COPY ["Ordering.Infrastructure/Ordering.Infrastructure.csproj", "Ordering.Infrastructure/"]
 RUN dotnet restore "Ordering.API/Ordering.API.csproj"
 COPY . .
 WORKDIR "/src/Ordering.API"
