--- a/src/CSharpMicroServices/Ordering.API/appsettings.json
+++ b/src/CSharpMicroServices/Ordering.API/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=ASP.NET_Projects;Password=810947;"
+    "OrderingConnectionString": "Server=localhost,1433;Database=OrderDb;User Id=sa;Password=SwN12345678;"
   },
   "EmailSettings": {
     "FromAddress": "ibragimov-amir@list.ru",
-    "ApiKey": "",
+    "ApiKey": "", 
     "FromName": "Amir"
   },
   "Logging": {
