--- a/src/CSharpMicroServices/docker-compose.override.yml
+++ b/src/CSharpMicroServices/docker-compose.override.yml
@@ -30,12 +30,18 @@ services:
   orderdb:
     container_name: orderdb
     environment:
-        SA_USER: "ASP.NET_Projects"
-        SA_PASSWORD: "810947"
+        SA_PASSWORD: "SwN12345678"
         ACCEPT_EULA: "Y"
     restart: always
     ports:
       - "1433:1433"
+        
+  rabbitmq:
+    container_name: rabbitmq
+    restart: always
+    ports:
+      - "5672:5672"
+      - "15672:15672"
   
   pgadmin:
     container_name: pgadmin
@@ -98,4 +104,15 @@ services:
       - discountdb
     ports:
       - "8003:80"
+
+
+  ordering.api:
+    container_name: ordering.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678;"
+    depends_on:
+      - orderdb
+    ports:
+      - "8004:80"
 
