--- a/src/CSharpMicroServices/docker-compose.yml
+++ b/src/CSharpMicroServices/docker-compose.yml
@@ -12,6 +12,9 @@ services:
     
   orderdb:
     image: mcr.microsoft.com/mssql/server:2017-latest
+    
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
      
   pgadmin:
     image: dpage/pgadmin4
@@ -43,9 +46,17 @@ services:
       context: .
       dockerfile: Discount.Grpc/Dockerfile
 
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+      context: .
+      dockerfile: Ordering.API/Dockerfile
+
 volumes: 
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
+
 
