--- a/src/CSharpMicroServices/docker-compose.yml
+++ b/src/CSharpMicroServices/docker-compose.yml
@@ -52,6 +52,12 @@ services:
       context: .
       dockerfile: Ordering.API/Dockerfile
 
+  ocelotapigw:
+    image: ${DOCKER_REGISTRY-}ocelotapigw
+    build:
+      context: .
+      dockerfile: OcelotApiGw/Dockerfile
+
 volumes: 
   mongo_data:
   portainer_data:
